API Proxy Added

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -10,9 +10,6 @@ RUN npm install
 FROM base AS builder
 WORKDIR /app
 
-ARG NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
-
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
@@ -22,6 +19,7 @@ FROM base AS runner
 WORKDIR /app
 
 ENV NODE_ENV=production
+ENV API_URL=http://state-engine.coldchain.svc.cluster.local
 
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 nextjs
